<resources>
    <string name="app_name">Good Timer</string>
    <string name="textViewHoursText">Часы</string>
    <string name="textViewMinutesText">Минуты</string>
    <string name="textViewSecondsText">Секунды</string>
    <string name="editTextDescriptionText">Описание</string>
    <string name="switchAddInActualTimersText">Добавить в список актульных</string>
    <string name="switchAddInActualTimersTextOn">Да</string>
    <string name="switchAddInActualTimersTextOff">Нет</string>
    <string name="buttonStartTimerText">Запустить таймер</string>
    <string name="textViewHeaderOfListActualTimersText">Актуальные таймеры</string>
    <string name="imageViewItemListActualTimersContentDescription">Изображение таймера для элемента списка</string>
    <string name="textViewListActualTimersTimerValueDefaultText">Значение</string>
    <string name="sizeListOfActualTimers">Размер списка актуальных таймеров</string>
    <string name="itemActualTimer">ActualTimer</string>
    <string name="firstRun">FirstRun</string>
    <string name="item_context_menu_actual_timers_start">Запустить</string>
    <string name="item_context_menu_actual_timers_select">Выбрать</string>
    <string name="item_context_menu_actual_timers_edit">Редактировать</string>
    <string name="item_context_menu_actual_timers_delete">Удалить</string>
    <string name="imageButtonAddTimerToListContentDescription">Кнопка - добавить таймер</string>
</resources>
