<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootElementHeaderListViewActualTimers">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/textViewHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHours"
            android:layout_weight="1" />

        <TextView
            android:text="@string/textViewMinutesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMinutes"
            android:layout_weight="1" />

        <TextView
            android:text="@string/textViewSecondsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSeconds"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
