<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/imageViewItemListActualTimersContentDescription"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@drawable/divider_vertical_item_list_actual_timers" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/editTextDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewListActualTimersTimerDescription"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/divider_horizontal_item_list_actual_timers" />

        <TextView
            android:text="@string/textViewListActualTimersTimerValueDefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewListActualTimersTimerValue"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
